fixing validation error

--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
           <div class="modal__input">
             <input id="link-input-avatar" class="modal__description modal__description_type_link" placeholder="Ссылка на картинку" name="link"
             required type="URL">
-            <span class="link-input-error modal__description-error"></span> 
+            <span class="link-input-avatar-error modal__description-error"></span> 
           </div>
           <button aria-label="save" class="button button_submit cursor button_submit-avatar">Сохранить</button>
         </form>
